<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hiraeth Flame</string>
    <string name="nav_library">Library</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_albums">Albums</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="splash_credit">\"A dragon breaths fire with no smoke.\"</string>
    <string name="splash_author">- A friend with fantastic memories</string>
    <string name="nav_previous">Previous</string>
    <string name="nav_next">Next</string>
    <string name="media_index_format">%1$d of %2$d</string>
    <string name="delete_confirmation_title">Delete Media?</string>
    <string name="delete_confirmation_message">Are you sure you want to permanently delete this item from your library?</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit">Edit</string>
    <string name="action_filter">Filter</string>
    <string name="action_zip">Zip</string>
    <string name="action_add">Add</string>
    <string name="action_quick_import">Quick Import</string>
    <string name="action_combine">Combine Images</string>
    <string name="action_delete_selected">Delete Selected</string>
    <string name="files_selected_count">%1$d files selected</string>
    <string name="action_edit_image">Edit Image</string>
    <string name="brightness">Brightness</string>
    <string name="rotate">Rotate</string>
    <string name="crop">Crop</string>
    <string name="save_changes">Save Changes</string>
    <string name="image_editor">Image Editor</string>
    <string name="delete_album_title">Delete Album?</string>
    <string name="delete_album_message">Are you sure you want to delete this album? The media inside will not be deleted from your library.</string>
    <string name="manage_album_media_title">Select media for this album</string>

    <!-- Selection -->
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="files_selected">%1$d selected</string>
    <string name="move_to_album">Move to Album</string>
    <string name="create_new_album">+ Create New Album</string>
    <string name="new_album_name_hint">Album name</string>
    <string name="export_selected">Export</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="delete_selected_title">Delete %1$d items?</string>
    <string name="delete_selected_message">Are you sure you want to permanently delete these items?</string>
    <string name="select_items_to_export">Select items to export</string>
    <string name="export_complete">Export complete</string>
    <string name="export_failed">Export failed</string>

    <!-- Export -->
    <string name="choose_format">Choose export format</string>
    <string name="export_single">Export</string>
    <string name="exporting">Exporting…</string>
</resources>
